[package]
name = "bowsernet"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
rustls = "0.23.17"
rustls-platform-verifier = "0.4.0"

# https://github.com/eyre-rs/eyre/tree/master/color-eyre#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
